Separated sending and receiving in 2 different threads